"首页" = "Home";
"菜单" = "Menu";
"个人" = "Profile";
"我的" = "Me";
"登录" = "Sign In";
"提示" = "Notice";
"知道了" = "OK";
"保存" = "Save";
"保存中" = "Saving";
...
